plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.18'
}

subprojects {

    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'java-test-fixtures'

    group = 'com.itcook'
    version = '0.0.1-SNAPSHOT'
    java {
        sourceCompatibility = JavaVersion.VERSION_17
    }

    repositories {
        mavenCentral()
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testCompileOnly 'org.projectlombok:lombok'
        testAnnotationProcessor 'org.projectlombok:lombok'

        testRuntimeOnly 'com.h2database:h2'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'

    }

    tasks.named('test',Test) {
        useJUnitPlatform()
    }
}

project(':itcook-api') {
    bootJar {
        enabled = true
    }
    jar {
        // java test fixtures 때문에
        enabled = true
    }
    dependencies {
        implementation project(':itcook-domain')
        implementation project(':itcook-infra')

        testImplementation(testFixtures(project(':itcook-domain')))
    }
}

project(':itcook-domain') {
    bootJar {
        enabled = false
    }
    jar {
        enabled = true
    }
    dependencies {
        implementation project(':itcook-infra')
    }
}

project(':itcook-infra') {
    bootJar {
        enabled = false
    }
    jar {
        enabled = true
    }
}

bootJar {
    enabled = false
}

jar {
    enabled = false
}